--- a/client/src/style/_main.scss
+++ b/client/src/style/_main.scss
@@ -1,9 +1,27 @@
 @import "./colors";
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,600;6..12,700;6..12,800;6..12,900&family=Nunito:wght@200;300;400;500;600;700;800;900;1000&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
+// reset
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html,
 body {
   font-family: "Nunito", sans-serif;
   font-family: "Nunito Sans", sans-serif;
   font-family: "Roboto", sans-serif;
+}
+
+.page {
+  min-height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: $bg-color;
 }
