--- a/client/src/components/button/button.style.scss
+++ b/client/src/components/button/button.style.scss
@@ -2,10 +2,21 @@
 
 .btn {
   width: 100%;
-  height: 45px;
+  height: 43px;
   border: none;
-  color: $white;
-  background-color: $primary;
   border-radius: 6px;
   margin-top: 10px;
+  cursor: pointer;
+  border: 1px solid $primary;
+}
+
+.btn.primary {
+  background-color: $primary;
+  color: $white;
+}
+
+.btn.secondary {
+  background-color: $white;
+  color: $primary;
+  border: 1px solid;
 }
