--- a/client/src/pages/LoginPage/loginpage.style.scss
+++ b/client/src/pages/LoginPage/loginpage.style.scss
@@ -1,8 +1,66 @@
+@use "../../style/" as *;
+
 .card__form-group {
   padding: 30px 20px;
 }
 
-.card__footer {
+.card__register {
   padding: 20px 0 0 0;
   text-align: center;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.card__seperator {
+  @include center;
+  gap: 12px;
+  color: $grey;
+  font-size: 14px;
+  margin: 20px;
+
+  .seperator__line {
+    height: 1px;
+    background-color: rgba($grey, $alpha: 0.4);
+    flex: 1;
+  }
+}
+
+.card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80vh !important;
+  overflow: hidden;
+
+  & > section:first-child {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  & > section:last-child {
+    position: relative;
+
+    &::before {
+      position: absolute;
+      content: "";
+      background-color: rgba($primary_darker, $alpha: 0.5);
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
+  }
+
+  & > section {
+    height: 100%;
+    flex: 1;
+    overflow: hidden !important;
+
+    img {
+      object-fit: cover;
+      height: 100%;
+      width: 100%;
+    }
+  }
 }
