--- a/client/src/style/_colors.scss
+++ b/client/src/style/_colors.scss
@@ -2,4 +2,7 @@ $bg-color: #f1f5f9;
 $white: #fff;
 $black: #000;
 $primary: #5038ee;
+$primary_darker: #1b1542;
 $border-color: #dfdee7;
+$grey: #646464;
+$input_bg: #f6f6f6;
