--- a/client/src/style/_main.scss
+++ b/client/src/style/_main.scss
@@ -19,10 +19,10 @@ body {
   min-height: 100vh;
   width: 100vw;
   display: flex;
-  align-items: center;
   justify-content: center;
   background: $bg-color;
   padding: 20px;
+  padding-top: 90px;
 }
 
 a {
