--- a/client/src/pages/auth-page/authpage.style.scss
+++ b/client/src/pages/auth-page/authpage.style.scss
@@ -29,8 +29,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 80vh !important;
   overflow: hidden;
+  height: 550px !important;
 
   & > section:first-child {
     display: flex;
