--- a/client/src/style/_main.scss
+++ b/client/src/style/_main.scss
@@ -1,5 +1,6 @@
 @import "./colors";
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,600;6..12,700;6..12,800;6..12,900&family=Nunito:wght@200;300;400;500;600;700;800;900;1000&family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import "./mixins";
 
 // reset
 *,
@@ -23,6 +24,11 @@ body {
   background: $bg-color;
   padding: 20px;
   padding-top: 90px;
+}
+
+.content-page {
+  @include center;
+  flex: 1;
 }
 
 a {
