- Add PageTitle, Avatar, Seperator, Badge and JobItem components - Move types into dedicated file - Update Button component so that it gets rendered with different colors  - Add box shadow to dropdown component  - Make the side bar fixed during scrolling  - Resolve Eslint warnings

--- a/client/src/components/button/button.style.scss
+++ b/client/src/components/button/button.style.scss
@@ -30,3 +30,23 @@
     background-color: $bg-color !important;
   }
 }
+
+.btn.small {
+  display: inline-block;
+  width: 100px !important;
+  height: fit-content;
+  padding: 8px;
+  font-size: 1rem;
+}
+
+.btn.delete {
+  color: $declined-color !important;
+  background-color: $declined-bg !important;
+  border-color: $declined-bg;
+}
+
+.btn.edit {
+  color: $job-offer-color !important;
+  background-color: $job-offer-bg !important;
+  border-color: $job-offer-bg;
+}
