--- a/client/src/style/_colors.scss
+++ b/client/src/style/_colors.scss
@@ -7,3 +7,11 @@ $border-color: #dfdee7;
 $grey: #646464;
 $input_bg: #f6f6f6;
 $sidebar_selected: #e2f0ff;
+$pending-bg: #faeec7;
+$pending-color: #917938;
+$interview-bg: #dde8f5;
+$interview-color: #5d76c1;
+$job-offer-bg: #cde7dc;
+$job-offer-color: #4b7060;
+$declined-bg: #f7d7d7;
+$declined-color: #894149;
