--- a/client/src/components/siderbar/sidebar.style.scss
+++ b/client/src/components/siderbar/sidebar.style.scss
@@ -1,7 +1,10 @@
 @use "../../style/" as *;
 
 .sidebar {
+  position: fixed;
+  left: 0;
   width: 250px;
+  height: 100vh;
   background-color: $white;
   border-right: 1px solid $border-color;
   padding: 90px 20px;
