--- a/client/src/style/_main.scss
+++ b/client/src/style/_main.scss
@@ -35,3 +35,10 @@ a {
   text-decoration: none;
   color: $primary;
 }
+
+.seperator {
+  height: 1px;
+  width: 100%;
+  background-color: rgb(216, 216, 216);
+  margin: 10px 0;
+}
