--- a/client/src/components/dropdown/dropdown.style.scss
+++ b/client/src/components/dropdown/dropdown.style.scss
@@ -3,52 +3,73 @@
 .dropdown {
   position: relative;
   display: flex;
-  align-items: center;
   justify-content: center;
-  width: 100px;
+  flex-direction: column;
+  width: fit-content;
+
+  .dropdown__label {
+    margin-bottom: 6px;
+    cursor: default;
+
+    &:hover {
+      + section .dropdown__selected {
+        border: 1px solid rgba($primary, $alpha: 0.4);
+      }
+    }
+  }
 
   .dropdown__selected {
+    transition: all 0.3s ease;
+    flex: 1;
     width: 100%;
-    text-align: center;
     background-color: $bg-color;
     padding: 5px 10px;
     border: 1px solid $border-color;
     border-radius: 6px;
     cursor: pointer;
     margin-bottom: 0 !important;
+    text-transform: capitalize;
+    display: flex;
+    align-items: center;
+    gap: 10px;
   }
 
-  .dropdown__items {
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    top: 40px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: $white;
-    border-radius: 6px;
-    overflow: hidden;
-    border: 1px solid $border-color;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
-      rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  > section {
+    position: relative;
 
-    .dropdown__item {
-      cursor: pointer;
-      padding: 5px 10px;
+    .dropdown__items {
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      top: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: $white;
+      border-radius: 6px;
+      overflow: hidden;
+      border: 1px solid $border-color;
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+        rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 
-      &:not(:last-child) {
-        border-bottom: 1px solid $border-color;
+      .dropdown__item {
+        cursor: pointer;
+        padding: 5px 10px;
+        text-transform: capitalize;
+
+        &:not(:last-child) {
+          border-bottom: 1px solid $border-color;
+        }
+
+        &:hover {
+          background-color: $bg-color;
+          color: $primary;
+        }
       }
 
-      &:hover {
-        background-color: $bg-color;
-        color: $primary;
+      .dropdown__item.selected {
+        background-color: $primary;
+        color: $white;
       }
-    }
-
-    .dropdown__item.selected {
-      background-color: $primary;
-      color: $white;
     }
   }
 }
