--- a/client/src/components/input/input.style.scss
+++ b/client/src/components/input/input.style.scss
@@ -53,3 +53,11 @@
     padding: 0 4px;
   }
 }
+
+.input__wrapper.small {
+  .input {
+    padding: 5px 10px !important;
+    font-size: 1rem !important;
+    height: 33px !important;
+  }
+}
