--- a/client/src/components/job-item/JobItem.style.scss
+++ b/client/src/components/job-item/JobItem.style.scss
@@ -3,12 +3,20 @@
 .job-item {
   background-color: $white;
   padding: 20px;
-  border-radius: 20px;
+  border-radius: 10px;
   border: 1px solid $border-color;
 
   header {
     display: flex;
     gap: 20px;
+
+    .job-title {
+      font-size: 1.25rem;
+    }
+
+    .company {
+      color: $grey;
+    }
   }
 
   main {
