--- a/client/src/components/button/button.style.scss
+++ b/client/src/components/button/button.style.scss
@@ -33,7 +33,8 @@
 
 .btn.small {
   display: inline-block;
-  width: 100px !important;
+  width: auto !important;
+  min-width: 100px;
   height: fit-content;
   padding: 8px;
   font-size: 1rem;
