--- a/client/src/components/input/input.style.scss
+++ b/client/src/components/input/input.style.scss
@@ -59,5 +59,6 @@
     padding: 5px 10px !important;
     font-size: 1rem !important;
     height: 33px !important;
+    background: $bg-color;
   }
 }
