--- a/client/src/components/button/button.style.scss
+++ b/client/src/components/button/button.style.scss
@@ -11,7 +11,7 @@
   opacity: 0.9;
   @include animate;
 
-  &:hover {
+  &:not(:disabled):hover {
     opacity: 1;
   }
 }
@@ -61,4 +61,11 @@
   justify-content: center;
   align-items: center;
   gap: 4px;
+}
+
+.btn:disabled {
+  background-color: $grey;
+  cursor: not-allowed;
+  border-color: $grey;
+  opacity: 0.5;
 }
