finalize the app

--- a/client/src/components/dropdown/dropdown.style.scss
+++ b/client/src/components/dropdown/dropdown.style.scss
@@ -48,6 +48,7 @@
       border-radius: 6px;
       overflow: hidden;
       border: 1px solid $border-color;
+      z-index: 999999;
       box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
         rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 
