--- a/client/src/components/button/button.style.scss
+++ b/client/src/components/button/button.style.scss
@@ -10,9 +10,52 @@
   border: 1px solid $primary;
   opacity: 0.9;
   @include animate;
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
 
   &:not(:disabled):hover {
     opacity: 1;
+  }
+
+  .lds-ring,
+  .lds-ring div {
+    box-sizing: border-box;
+  }
+  .lds-ring {
+    display: inline-block;
+    position: relative;
+    width: 20px;
+    height: 20px;
+  }
+  .lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border: 2px solid currentColor;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: currentColor transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 }
 
@@ -34,7 +77,7 @@
 .btn.small {
   display: inline-block;
   width: auto !important;
-  min-width: 100px;
+  min-width: 170px;
   height: fit-content;
   padding: 8px;
   font-size: 1rem;
@@ -64,8 +107,9 @@
 }
 
 .btn:disabled {
-  background-color: $grey;
+  background-color: $grey !important;
   cursor: not-allowed;
-  border-color: $grey;
-  opacity: 0.5;
+  border-color: $grey !important;
+  color: $white !important;
+  opacity: 0.5 !important;
 }
